--- a/MAP_FINAL.html
+++ b/MAP_FINAL.html
@@ -224,7 +224,7 @@ var stores = {
                       "properties": {
                         "Name": "VA Newark",
                         "Address": "20 Washington Pl, Newark, NJ 07102",
-                        "Service": "anitorial Services/ Mech Maintenance",
+                        "Service": "Janitorial Services/ Mech Maintenance",
                         "Contract": "Source America"
                       },
                       "geometry": {
